--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <IMG SRC="img/1 fera .png"
+    <IMG SRC="img/10.jpg"
+    <IMG src="img/banner-feira-fim (3).jpg"
+    <IMG src="img/banner-feira-fim (4).jpg.jpg"
+    <IMG src="img/feita do melado.jpg"
+    <IMG src="img/hq7.jpg"
+    <IMG src="img/images2.jpeg"
+    <IMG src="img/images8.jpeg"
+    <img src="img/melado_capanema-5.jpg"
+    <
     <div<>/div
 
 </body>
