--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <IMG src="img/images2.jpeg"
     <IMG src="img/images8.jpeg"
     <img src="img/melado_capanema-5.jpg"
-    <
+    <img src="img/melado_de_capanema_6.jpg"
     <div<>/div
 
 </body>
